[gd_scene load_steps=11 format=3 uid="uid://dm2gjidl1pws5"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_ml3fd"]
[ext_resource type="FontFile" uid="uid://bdbd02pjsukac" path="res://media/fonts/CastlevaniaNES.ttf" id="2_a7j4g"]
[ext_resource type="Texture2D" uid="uid://cv105gtfxn6u3" path="res://media/graphics/player_healthbar.png" id="3_a2qj5"]
[ext_resource type="Script" path="res://scripts/stage_label.gd" id="3_wcg8v"]
[ext_resource type="Texture2D" uid="uid://b17wp7eu76yir" path="res://media/graphics/empty_healthbar.png" id="4_ux4al"]
[ext_resource type="Texture2D" uid="uid://bg1cam8shkxe1" path="res://media/graphics/enemy_healthbar.png" id="5_ip3yo"]
[ext_resource type="Texture2D" uid="uid://be4ayy6v0com6" path="res://media/graphics/subweapon_container.png" id="6_qm5vt"]
[ext_resource type="Texture2D" uid="uid://hfqx1mlweo18" path="res://media/graphics/heart_icon.png" id="7_5hip0"]
[ext_resource type="Texture2D" uid="uid://bvblnkatwynwr" path="res://media/graphics/holy_water_icon.png" id="7_l4l51"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n2ieu"]
bg_color = Color(0, 0, 0, 1)

[node name="Game" type="Node2D"]
script = ExtResource("1_ml3fd")

[node name="GUI" type="CanvasLayer" parent="."]

[node name="GlitchFix" type="ColorRect" parent="GUI"]
offset_right = 40.0
offset_bottom = 40.0
color = Color(1, 1, 1, 0)

[node name="Blackout" type="ColorRect" parent="GUI"]
process_mode = 3
visible = false
offset_right = 384.0
offset_bottom = 216.0
color = Color(0, 0, 0, 1)

[node name="PanelContainer" type="PanelContainer" parent="GUI"]
offset_right = 384.0
offset_bottom = 35.0
theme_override_styles/panel = SubResource("StyleBoxFlat_n2ieu")

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = -3

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="Score" type="Label" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_a7j4g")
theme_override_font_sizes/font_size = 16
text = "SCORE-000000"
max_lines_visible = 1

[node name="Spacer" type="Control" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Time" type="Label" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_a7j4g")
theme_override_font_sizes/font_size = 16
text = "TIME 0300"
max_lines_visible = 1

[node name="Spacer2" type="Control" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Stage" type="Label" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_a7j4g")
theme_override_font_sizes/font_size = 16
text = "STAGE 01"
max_lines_visible = 1
script = ExtResource("3_wcg8v")

[node name="HBoxContainer2" type="HBoxContainer" parent="GUI/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = -3

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Player" type="Label" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_a7j4g")
theme_override_font_sizes/font_size = 16
text = "PLAYER"
max_lines_visible = 1

[node name="PlayerHealthBar" type="MarginContainer" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 3

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer/PlayerHealthBar"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer/PlayerHealthBar/HBoxContainer"]
texture_repeat = 2
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("3_a2qj5")
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer/PlayerHealthBar/HBoxContainer"]
texture_repeat = 2
custom_minimum_size = Vector2(0, 6)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture = ExtResource("4_ux4al")
expand_mode = 1
stretch_mode = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Enemy" type="Label" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_a7j4g")
theme_override_font_sizes/font_size = 16
text = "ENEMY "
max_lines_visible = 1

[node name="EnemyHealthBar" type="MarginContainer" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 3

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2/EnemyHealthBar"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2/EnemyHealthBar/HBoxContainer"]
texture_repeat = 2
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("5_ip3yo")
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2/EnemyHealthBar/HBoxContainer"]
texture_repeat = 2
custom_minimum_size = Vector2(0, 6)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture = ExtResource("4_ux4al")
expand_mode = 1
stretch_mode = 1

[node name="Spacer" type="Control" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 3

[node name="SubweaponContainer" type="TextureRect" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer2/MarginContainer"]
layout_mode = 2
texture = ExtResource("6_qm5vt")

[node name="TextureRect" type="TextureRect" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer2/MarginContainer/SubweaponContainer"]
visible = false
layout_mode = 0
offset_left = 8.0
offset_top = 3.0
offset_right = 24.0
offset_bottom = 19.0
texture = ExtResource("7_l4l51")
stretch_mode = 2

[node name="Spacer2" type="Control" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = -2

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("7_5hip0")
stretch_mode = 2

[node name="Hearts" type="Label" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_a7j4g")
theme_override_font_sizes/font_size = 16
text = "-00"

[node name="Label" type="Label" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_a7j4g")
theme_override_font_sizes/font_size = 16
text = "P-00"

[node name="Spacer3" type="Control" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Camera" type="Camera2D" parent="."]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3

[node name="DebugWindow" type="Window" parent="."]
process_mode = 3
transparent_bg = true
mode = 1
initial_position = 1
size = Vector2i(768, 432)
visible = false
transient = true

[node name="Camera2D" type="Camera2D" parent="DebugWindow"]

[connection signal="close_requested" from="DebugWindow" to="." method="_on_debug_window_close_requested"]
